2005-10-20  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/init.tcl: fixed to be able to load Tcl modules
	* include/ns.h: changed reserved keyword delete so C++ 
	module scan be compiled

2005-10-20  Bernd Eidenschink  <eide@users.sourceforge.net>

	* tests/ns_conn.test:
	* tests/ns_crypt.test:
	* tests/ns_env.test:
	* tests/ns_gifsize.test:
	* tests/ns_jpegsize.test:
	* tests/ns_httptime.test:
	* tests/ns_info.test:
	* tests/ns_mime.test:
	* tests/ns_sha1.test: various new tests, some to be 
	improved over time (especially ns_info)
	* tests/images/: some gif and jpeg files for the
	image tests
	

2005-10-20  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsd/callbacks.c: added options to run registered callbacks
	in both FIFO and LIFO fashion. All of the start-type callbacks
	are now executed in FIFO and all stop-type in LIFO.

2005-10-20  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/tclmisc.c:
	* nsd/uuencode.c:
	* test/ns_uuencode.test: fixed bug that causes nsd to segfault if 
	called ns_uuencode with 1 byte string

2005-10-19  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nslog/nslog.c (Ns_ModuleInit): failed to create the log
	file when given the relative path.

2005-10-17  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nslog/nslog.c: missed initialization of logfile descriptor.
	This caused us to close invalid descriptor in LogOpen. As the
	result, the interactive NS mode assumed non-interactive use and
	prematurely exited.

2005-10-17  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/log.c:
	* tests/ns_log.test: Add new sub-command: ns_logctl severity.
	With this you can query and set the status of any of the log
	levels at runtime.  For example, you could log into the control
	port -- ns_logctl severity debug on -- to track down a problem.

	* nslog/nslog.c:
	* nscp/nscp.c:
	* nscgi/nscgi.c:
	* nsdb/dbinit.c: Use new config routines.

2005-10-15  Stephen Deasey  <sdeasey@users.sf.net>
