@@ -1,0 +1,8 @@
+# 
+#
+# $Header$
+#
+
+MOD      =  nsdbtest.so
+OBJS     =  nsdbtest.o
+include  ../include/Makefile.build
