@@ -1,0 +1,19 @@
+#
+# $Header$
+#
+
+
+package require tcltest 2.2
+namespace import -force ::tcltest::*
+
+eval ::tcltest::configure $argv
+
+
+
+test ns_db-1.1 {basic syntax} -body {
+    ns_db
+} -returnCodes error -result {wrong # of args: should be "ns_db command ?args ...?}
+
+
+
+cleanupTests
